--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,106 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  background-color: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+  background-color: #fff;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo {
+  height: 70px;
+  display: flex;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-elements {
+  position: absolute;
+  right: 0;
+  top: 60px;
+  background-color: #fff;
+  width: 0px;
+  height: calc(100vh - 60px);
+  transition: all 0.3s ease-in;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.nav-elements.active {
+  width: 270px;
+}
+
+.nav-elements ul {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  list-style-type: none;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-elements ul li {
+  margin-right: unset;
+  margin-top: 22px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+.topRightsection {
+  height: 70px;
+}
+
+@media (min-width:1023px) {
+  .menu-icon {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+
+  .nav-elements {
+    overflow: visible;
+    position: unset;
+    width: auto;
+    height: 70px;
+  }
+
+  .nav-elements.active {
+    width: auto;
+  }
+
+  .nav-elements ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .nav-elements ul li:not(:last-child) {
+    margin-right: 60px;
+  }
+
+  .nav-elements ul a {
+    font-size: 16px;
+    font-weight: 400;
+
+    color: #2f234f;
+    text-decoration: none;
+  }
+
+  .nav-elements ul a.active {
+    color: #574c4c;
+    font-weight: 500;
+    position: relative;
+  }
+
+  .nav-elements ul a.active::after {
+    content: '';
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #574c4c;
   }
 }
+
+@import 'bootstrap/dist/css/bootstrap.min.css';
